--- a/european_blueberry.html
+++ b/european_blueberry.html
@@ -9,7 +9,7 @@
   
     <nav>
       <a class="textstyle" href="index.html">Home page</a>
-      <a class= "textstyle" href="european_blueberry.html">European buleberry</a>
+      <a class= "textstyle" href="european_blueberry.html">European blueberry</a>
       <a class= "textstyle" href="raspberry.html">Raspberry</a>
       <a class= "textstyle" href="cowberry.html">Cowberry</a>
   </nav>
