--- a/raspberry.html
+++ b/raspberry.html
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <a class="textstyle" href="index.html">Home page</a>
-      <a class= "textstyle" href="european_blueberry.html">European buleberry</a>
+      <a class= "textstyle" href="european_blueberry.html">European blueberry</a>
       <a class= "textstyle" href="raspberry.html">Raspberry</a>
       <a class= "textstyle" href="cowberry.html">Cowberry</a>
     </nav>
