--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       <a class="textstyle" href="raspberry.html">Raspberry</a>
       <a class="textstyle" href="cowberry.html">Cowberry</a></nav>
     <br>
+      <div class="grid-container">
+  <div class="item1">Header</div>
+  <div class="item2">Menu</div>
+  <div class="item3">Main</div>  
+  <div class="item4">Right</div>
+  <div class="item5">Footer</div>
+</div>
       <div id="main">
     <h1>Wild berries in Finland</h1>
     <p class="wildberries">Welcome to this website! Here we will talk about the general wild berries which grow in Finland. Finland is very nice country with different kinds of wild berries. Most known berries as European blueberry, raspberry, cowberry, blackberry, cranberry, cloudberry, bog blueberry, wild strawberry. We are going to focus on blueberry, raspberry, and cowberry.</p>
