--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav>
+   <header> 
+       <nav>
       <a class="textstyle" href="index.html">Home page</a>
       <a class="textstyle" href="european_blueberry.html">European blueberry</a>
       <a class="textstyle" href="raspberry.html">Raspberry</a>
       <a class="textstyle" href="cowberry.html">Cowberry</a></nav>
+      </header>
     <br>
       <div class="grid-container">
   <div class="item1">berries</div>
@@ -32,5 +34,9 @@
     <img src="Blackberries.jpg" alt="blackberry">
     <p class="sourcelink">https://fi.wikipedia.org/wiki/Karhunvatukka#/media/Tiedosto:Blackberries_on_bush.jpg</p>
     </div>
+      <footer>
+           <p>Author: Jiao Yu</p>
+           <p><a href="annieuu21@gmail.com">annieuu21@gmail.com</a></p>
+      </footer>
   </body>
 </html>
