--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img src="Blackberries.jpg" alt="blackberry">
     <p class="sourcelink">https://fi.wikipedia.org/wiki/Karhunvatukka#/media/Tiedosto:Blackberries_on_bush.jpg</p>
     <footer>
-           <p>Author: Jiao Yu</p>
+           <p>&copy;Copyright reserved.</p>
            <p><a href="annieuu21@gmail.com">annieuu21@gmail.com</a></p>
       </footer>
       </div>
