--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css"></style>
-<link rel="stylesheet" href="aboutus.css">
+<style><link rel="stylesheet" href="style.css"></style>
+<style><link rel="stylesheet" href="aboutus.css"></style>
 <script src="new.js" defer></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>About us</title>
