--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <script src="new.js" defer></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>About us</title>
-<link rel="icon" href="improve.jpg" type="image/icon:type">
+<link rel="icon" href="improve.jpg" type="image/icon">
+
 </head>
 <body>
 <header>
