--- a/contact_us.html
+++ b/contact_us.html
@@ -35,7 +35,7 @@
     <li class="contactinfo"><h1>Contact us</h1><br>
         <p>Tel. +358 44 987 3373</p>
         <p>Email: raimo.lewing@gmail.com</p>
-        <p>Address: Kilonkuja 3A 35, 02610 Espoo Finland</address></p></li>
+        <p>Address: Kilonkuja 3A 35, 02610 Espoo Finland</p></li>
     
 </ul>
 </main>
