--- a/customer_faq.html
+++ b/customer_faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
@@ -37,7 +37,7 @@
             <br>
             <br>
                 <h3>Q: We are a small startup with only a few persons. Do we need to hire a Quality Manager?</h3>
-
+<p>
                 A: Quality Manager can either be someone’s side responsibility or you can hire a consultant on
                 hourly basis. Depending on your own capaciaty, during build of a quality system´the consultants
                 assignment can be 2-3 days per week. When the operations get stabilized, it can be reduced to one day
