--- a/customer_faq.html
+++ b/customer_faq.html
@@ -54,7 +54,7 @@
         </div>
 
          <div id="content3"> 
-            <h3> What kind of language should we use for audit?</h3>
+            <h3>Q: What kind of language should we use for audit?</h3>
                 <p>A: There is no legal requirement to use a certain amount of four-syllable words. On the contrary,
                 quality system documentation shall be written in a language which is easily uderstood by the people
                 reading it. However, if you plan to get your managment system certified, somebody needs to ”translate”
