--- a/index.html
+++ b/index.html
@@ -39,16 +39,19 @@
        <li>
          <h1>About Us</h1>
          <p>JohdossakoVikaa is a small consultancy with long experience in quality management, third party auditing (certification and accreditation) and consultation. Background of the CEO is originally in electricity, but later involved in many other areas, e.g. software, medical devices, accreditation and research.</p>
-         <h3>Our Values</h3>
+         <br>
+          <h3>Our Values</h3>
       <ol>
-      <li> Honesty, keeping one’s promises.</li>
-      <li> Respect of customers’ and product users’ needs.</li>
-      <li> Diligence, to work with effort and attention.</li>
-      <li> Perseverance, not quitting at first obstacles.</li>
-      <li> Attitude, being optimistic, supportive and positive.</li>
+      <li> -Honesty, keeping one’s promises.</li>
+      <li> -Respect of customers’ and product users’ needs.</li>
+      <li> -Diligence, to work with effort and attention.</li>
+      <li> -Perseverance, not quitting at first obstacles.</li>
+      <li> -Attitude, being optimistic, supportive and positive.</li>
      </ol>
+          <br>
         <h3>Mission</h3>
      <p>Helping customers to build better future through applying systematic working.
+        <br>
      <h3>Vision</h3>
           <p>Management systems help to improve almost everything.</li>
         </ul>
