--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="index.html">About us</a></li>
         <li><a href="our_services.html">Our services</a></li>
         <li><a href="customer_faq.html">Customer FAQ</a></li>
+        <li><a href="our_customers.html">Our customers</a></li>
         <li><a href="contact_us.html">Contact us</a></li>
     </ul>
    </div>
