--- a/contact_us.html
+++ b/contact_us.html
@@ -21,6 +21,7 @@
                 <li><a href="index.html">About us</a></li>
                 <li><a href="our_services.html">Our services</a></li>
                 <li><a href="customer_faq.html">Customer FAQ</a></li>
+                <li><a href="our_customers.html">Our customers</a></li>
                 <li><a href="contact_us.html">Contact us</a></li>
             </ul>
            </div>
@@ -36,7 +37,7 @@
         <p>Tel. +358 44 987 3373</p>
         <p>Email: raimo.lewing@gmail.com</p>
         <p>Address: Kilonkuja 3A 35, 02610 Espoo Finland</p></li>
-    
+        <a id="pagelink" href="index.html">Back<a/>
 </ul>
 </main>
 
