--- a/our_services.html
+++ b/our_services.html
@@ -20,6 +20,7 @@
         <li><a href="index.html">About us</a></li>
         <li><a href="our_services.html">Our services</a></li>
         <li><a href="customer_faq.html">Customer FAQ</a></li>
+       <li><a href="our_customers.html">Our customers</a></li>
         <li><a href="contact_us.html">Contact us</a></li>
     </ul>
    </div>
@@ -61,7 +62,8 @@
             <p>The original ISO 9001 ”general” management system standard has been expanded to numerous subject specific ones such as for Medical Devices, Testing and Calibration, Environment, Occupational Health and Safety...and so on. A natural starting point for most development could be with the general standard and then expanding seeking advice from the detail standard on the specific challenges of the company. Many of the standards are supported with guidelines for additional advice.
                 </p><br>
                 <p>JohdossakoVikaa offers help to develop management systems both by auditing and/or by creating the system’s procedures, record templates and work instructions – management system from JohdossakoVikaa and technical content from the customer.
-                </p></li>
+                </p>
+       <p><a id="pagelink" href="index.html">Back</a></p> </li>
        </ul>
    </article>
     </main>
