--- a/contact_us.html
+++ b/contact_us.html
@@ -36,8 +36,11 @@
     <li class="contactinfo"><h1>Contact us</h1><br>
         <p>Tel. +358 44 987 3373</p>
         <p>Email: raimo.lewing@gmail.com</p>
-        <p>Address: Kilonkuja 3A 35, 02610 Espoo Finland</p></li>
-        <a id="pagelink" href="index.html">Back<a/>
+        <p>Address: Kilonkuja 3A 35, 02610 Espoo Finland</p>
+        <br>
+        <p><a id="pagelink" href="index.html">Back<a/></p>
+    </li>
+        
 </ul>
 </main>
 
