--- a/our_customers.html
+++ b/our_customers.html
@@ -32,7 +32,7 @@
 
 <main>
   <section>
-    <img id="care" src="caremedical.png" alt="a picture of heart with text">
+    <a href="https://en.wikipedia.org/wiki/List_of_medical_wikis"><img id="care" src="caremedical.png" alt="a picture of heart with text"></a>
    </section>
   </main>
 <footer>
