--- a/our_customers.html
+++ b/our_customers.html
@@ -32,7 +32,10 @@
 
 <main>
   <section>
-    <a href="https://en.wikipedia.org/wiki/List_of_medical_wikis"><img id="care" src="caremedical.png" alt="a picture of heart with text"></a>
+    <p><a href="https://en.wikipedia.org/wiki/List_of_medical_wikis"><img id="care" src="caremedical.png" alt="a picture of heart with text"></a></p>
+     <br>
+     <br>
+     <p><a id="pagelink" href="index.html">Back<a/></p>
    </section>
   </main>
 <footer>
