--- a/contact_us.html
+++ b/contact_us.html
@@ -32,37 +32,24 @@
 
 <main>
 <ul class="contact">
-    <li><img id="phone" src="contact.png" alt="a picture of phone"></li>
+    <li><figure><img id="phone" src="contact.png" alt="a picture of phone"><figure></li>
     <li class="contactinfo"><h1>Contact us</h1><br>
         <p>Tel. +358 44 987 3373</p>
         <p>Email: raimo.lewing@gmail.com</p>
         <p>Address: Kilonkuja 3A 35, 02610 Espoo Finland</p>
         <br>
+        <br>
         <p><a id="pagelink" href="index.html">Back<a/></p>
     </li>
-        
 </ul>
 </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <footer class="foot">
     
 <ul>
-        <li class="list"><p class="footer-content">Copyright © JohdossakoVikaa Oy</p>
-            <p class="footer-content">All rights reserved.</p></li>
-        </ul>
+    <li class="list"><p class="footer-content">Copyright © JohdossakoVikaa Oy</p>
+      <p class="footer-content">All rights reserved.</p></li>
+</ul>
 </footer>
 </body>
 </html>
