--- a/our_customers.html
+++ b/our_customers.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css"></style>
+ <link rel="stylesheet" href="our_customers.css"></style>
 <script src="new.js" defer></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>About us</title>
