--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
         <h3>Mission</h3>
      <p>Helping customers to build better future through applying systematic working.
         <br>
-    
+        <br>
+        <br>
+         <p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
         </ul>
 </article>
    
