--- a/customer_faq.html
+++ b/customer_faq.html
@@ -65,6 +65,13 @@
              <br>
              <br>
              <p><a id="pagelink" href="index.html">Back</a></p> 
+             <br>
+             <br>
+             <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
         </div>
         </div>
     
