--- a/our_services.html
+++ b/our_services.html
@@ -22,6 +22,14 @@
         <li><a href="customer_faq.html">Customer FAQ</a></li>
        <li><a href="our_customers.html">Our customers</a></li>
         <li><a href="contact_us.html">Contact us</a></li>
+       
+       <br>
+             <br>
+             <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
     </ul>
    </div>
 </nav>
