--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
          <br>
           <h3>Our Values</h3>
       <ol>
-      <li> -Honesty, keeping one’s promises.</li>
-      <li> -Respect of customers’ and product users’ needs.</li>
-      <li> -Diligence, to work with effort and attention.</li>
-      <li> -Perseverance, not quitting at first obstacles.</li>
-      <li> -Attitude, being optimistic, supportive and positive.</li>
+         <li> -<span>Honesty</span>, keeping one’s promises.</li>
+      <li> -<span>Respect</span> of customers’ and product users’ needs.</li>
+      <li> -<span>Diligence</span>, to work with effort and attention.</li>
+      <li> -<span>Perseverance</span>, not quitting at first obstacles.</li>
+      <li> -<span>Attitude</span>, being optimistic, supportive and positive.</li>
      </ol>
           <br>
         <h3>Mission</h3>
