--- a/our_services.html
+++ b/our_services.html
@@ -22,15 +22,7 @@
         <li><a href="customer_faq.html">Customer FAQ</a></li>
        <li><a href="our_customers.html">Our customers</a></li>
         <li><a href="contact_us.html">Contact us</a></li>
-       
-       <br>
-             <br>
-             <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img style="border:0;width:88px;height:31px"
-            src="https://jigsaw.w3.org/css-validator/images/vcss"
-            alt="Valid CSS!" />
-    </a>
-    </ul>
+       </ul>
    </div>
 </nav>
 </header>
@@ -75,7 +67,15 @@
                 </p>
            <br>
            <br>
-       <p><a id="pagelink" href="index.html">Back</a></p> </li>
+       <p><a id="pagelink" href="index.html">Back</a></p> 
+        <br>
+             <br>
+             <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+       </li>
        </ul>
    </article>
     </main>
