--- a/contact_us.html
+++ b/contact_us.html
@@ -32,14 +32,15 @@
 
 <main>
 <ul class="contact">
-    <li><figure><img id="phone" src="contact.png" alt="a picture of phone"><figure></li>
-    <li class="contactinfo"><h1>Contact us</h1><br>
+    <li><figure><img id="phone" src="contact.png" alt="a picture of phone"></figure></li>
+    <li class="contactinfo">
+        <h1>Contact us</h1>
         <p>Tel. +358 44 987 3373</p>
         <p>Email: raimo.lewing@gmail.com</p>
         <p>Address: Kilonkuja 3A 35, 02610 Espoo Finland</p>
         <br>
         <br>
-        <p><a id="pagelink" href="index.html">Back<a/></p>
+        <p><a id="pagelink" href="index.html"> Back </a></p>
             <br>
             <br>
             <a href="https://jigsaw.w3.org/css-validator/check/referer">
