--- a/our_services.html
+++ b/our_services.html
@@ -58,7 +58,7 @@
     </ul>
 
     <ul class="services">
-        <li><img id="class" src="enviroment.jpg" alt="a figure of worker"></li>
+        <li><img class="servicepic" src="enviroment.jpg" alt="a figure of worker"></li>
         <li class="servicelist"><h1>Management development</h1><br>
             
             <p>The original ISO 9001 ”general” management system standard has been expanded to numerous subject specific ones such as for Medical Devices, Testing and Calibration, Environment, Occupational Health and Safety...and so on. A natural starting point for most development could be with the general standard and then expanding seeking advice from the detail standard on the specific challenges of the company. Many of the standards are supported with guidelines for additional advice.
