--- a/our_customers.html
+++ b/our_customers.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css"></style>
- <link rel="stylesheet" href="our_customers.css"></style>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="our_customers.css">
 <script src="new.js" defer></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>About us</title>
-<link rel="icon" href="improve.jpg" type="image/icon type">
+<link rel="icon" href="improve.jpg" type="image/icon">
 </head>
 <body>
 <header>
@@ -32,13 +32,13 @@
 </header>
 
 <main>
-  <section>
+  <div>
      <br>
      <br>
     <p><a href="https://en.wikipedia.org/wiki/List_of_medical_wikis"><img id="care" src="caremedical.png" alt="a picture of heart with text"></a></p>
      <br>
      <br>
-     <p><a id="pagelink" href="index.html">Back<a/></p>
+     <p><a id="pagelink" href="index.html">Back</a></p>
       <br>
        <br>
              <a href="https://jigsaw.w3.org/css-validator/check/referer">
@@ -46,7 +46,7 @@
             src="https://jigsaw.w3.org/css-validator/images/vcss"
             alt="Valid CSS!" />
     </a>
-   </section>
+   </div>
   </main>
 <footer>
     
