--- a/our_customers.html
+++ b/our_customers.html
@@ -6,13 +6,13 @@
 <link rel="stylesheet" href="our_customers.css">
 <script src="new.js" defer></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>About us</title>
+<title>Our customers</title>
 <link rel="icon" href="improve.jpg" type="image/icon">
 </head>
 <body>
 <header>
 <nav class="navbar">
-   <div class="brand-title">JohdossakoVikaa</div>
+   <div class="brand-title"><a class="logo" href="index.html">JohdossakoVikaa</a></div>
    <a href="#" class="toggle-button">
    <span class="bar"></span>
    <span class="bar"></span>
