--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
     </a>
       
 </p>
-          
+          <p>
+             <a href="https://validator.w3.org/check?uri=referer"><img
+        src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88"
+        alt="Valid XHTML 1.0!" /></a>
+          </p>
                 </ul>
 </article>
    
