--- a/our_services.html
+++ b/our_services.html
@@ -75,6 +75,12 @@
             src="https://jigsaw.w3.org/css-validator/images/vcss"
             alt="Valid CSS!">
     </a>
+           <br>
+       <br>
+          
+             <a href="https://validator.w3.org/check?uri=referer"><img
+        src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88"
+        alt="Valid XHTML 1.0!"></a>
        </li>
        </ul>
    </article>
