--- a/customer_faq.html
+++ b/customer_faq.html
@@ -68,17 +68,13 @@
              <p><a id="pagelink" href="index.html">Back</a></p> 
              <br>
              <br>
-             <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <span><a href="https://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="https://jigsaw.w3.org/css-validator/images/vcss"
             alt="Valid CSS!">
     </a>
-             <br>
-       <br>
-          
-             <a href="https://validator.w3.org/check?uri=referer"><img
-        src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88"
-        alt="Valid XHTML 1.0!"></a>
+      <a href="https://validator.w3.org/check?uri=referer"><img
+        src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88" alt="Valid XHTML 1.0!"></a></span>
         </div>
         </div>
     </article> 
